devon/web/theme/project.css
html, body {
    overflow: hidden;
}

body {
    margin: 0;
    font-family: Lucida Grande, Tahoma, sans-serif;
    font-size: 12px;
}

.toolbarLink {
    position: relative;
    padding: 3px 6px;
    text-decoration: none;
    -moz-outline: none !important;
    outline: none !important;
    color: #222;
    text-shadow: 1px 1px rgba(255, 255, 255, 0.3);
    font-weight: bold;
}

.toolbarLink:hover,
.toolbarLink.toggled { 
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    background-color: #626262;
    color: #FFFFFF;
    text-shadow: 1px 1px rgba(0, 0, 0, 0.3);
}

.toolbarLink.toggled { 
    cursor: default;
}

/**************************************************************************************************/

#toolbar {
    border-top: 1px solid #c0c0c0;
    border-bottom: 1px solid #404040;
    padding: 7px 8px 5px 8px;
    height: 17px;
    background: rgb(150, 150, 150);
    font-size: 12px; 
}

#toolbarRight {
    z-index: 1000;
    position: absolute;
    padding: 2px;
    top: 3px;
    right: 8px;
}

.projectTitle {
    font-weight: bold;
}

.separator {
    color: #AAAAAA;
}

.textbox {
    width: 200px;
    padding: 2px;
    border: 1px solid #9C9C9C;
    font-size: 12px;
}

.textbox[disabled] {
    background-color: #CCCCCC;
    color: #888888;
}

/**************************************************************************************************/

#quicksearchBox {
    position: relative;
    top: -3px;
    -webkit-appearance: searchfield;
}

#quicksearchIcon {
    cursor: pointer;
    position: relative;
    top: 4px;
    left: 4px;
    width: 23px;
    height: 17px;
    background: url(search.png) no-repeat;
}

#findBox {
    position: relative;
    top: -2px;
    border: none;
    width: 250px;    
    background: transparent;
    font-size: 12px;
    color: gray;
    height: 20px;
}

#findBox:focus {
    outline: none !important;
    color: black;
}

#findMenu {
    display: none;
    position: absolute;
    top: 28px;
    right: 0px;
    width: 350px;
    padding: 5px;
    background: #F0F0F0;
    border: 1px solid #AAA;
    border-top: none;
    -webkit-border-bottom-left-radius: 6px;
    -webkit-border-bottom-right-radius: 6px;
    -webkit-box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
}

.caption {
    width: 100px;
    text-align: right;
    font-size: 12px;
    color: #444444;
}

/**************************************************************************************************/

.bar {
    position: absolute;
    top: 31px;
    bottom: 0;
}

#process {
    border: none;
}

/**************************************************************************************************/

#browserBar {
    width: 300px;
}

#browser {
    position: absolute;
    top: 24px;
    bottom: 0;
    width: 100%;
    margin-left: -1px;
    border: none;
    border-left: 1px solid #9C9C9C;
}

#urlBar {
    margin-left: -1px;
    padding: 1px 0 0 4px;
    border-left: 1px solid #9C9C9C;
    height: 26px;
    background: url(toolbar.gif) repeat-x bottom;
    font-family: inherit;
    font-size: inherit;
}

#urlBox {
    width: 100%;
    padding: 1px 2px;
    border: 1px solid #AAAAAA;
    font-family: inherit;
    font-size: inherit;
}

/**************************************************************************************************/

#projectBar {
    width: 230px;
}

#tabBar {
    background: #D0D0D0 url(header1.gif) repeat-x bottom;
    border-bottom: 1px solid #404040;
    height: 30px;
    text-align: center;
    white-space: nowrap;
}

.tab {
    position: absolute;
    margin: 5px 0;
    padding: 2px 0;
    top:0;
    left: 0;
    width: 65px;
    font-size: 12px;
    text-decoration: none;
    color: #000000;
    -moz-outline: none !important;
    -moz-user-select: none;
    border: 1px solid transparent;
}

.tab:hover:active {
    background: #CCC;
    -webkit-border-radius: 10px;
}

.tab.selected {
    background: #8e8e8e;
    -webkit-border-radius: 10px;
    border-top: 1px solid #777;
    font-weight: bold;
    color: #FFFFFF;
    text-shadow: 1px 1px rgba(0, 0, 0, 0.3);
}

#projectsTab {
    left: 40px;
}

#testsTab {
    left: 110px;
}

.treeBox {
    display: none;
    overflow: auto;
    overflow-y: auto;
    overflow-x: hidden;
    position: absolute;
    top: 31px;
    bottom: 0;
    width: 100%;
}

.treeBox.selected {
    display: block;
}

#loadingBox {
    -webkit-box-sizing: border-box;
    color: rgb(96, 96, 96);
    text-shadow: 1px 1px rgba(255, 255, 255, 0.5);
    font-size: 17px;
    font-weight: bold;
    padding: 8px;
    text-align: center;
    padding-top: 150px;
}

.splitter {
    z-index: 99999;
    cursor: col-resize;
    top: 31px;
    width: 0px;
    border-right: 1px solid #404040;
    background: rgb(208, 215, 227);
}

/**************************************************************************************************/

.treeBox {
    -moz-user-select: none;
    -webkit-user-select: none;
    font-size: 11px;
    background: rgb(208, 215, 227);
}

.treeBody {
    margin-bottom: 4px;
    clear: both;
}

.treeHeader {
    margin: 4px 0 0 0;
    list-style-image: none;
    text-transform: uppercase;
    color: rgb(96, 96, 96);
    text-shadow: 1px 1px rgba(255, 255, 255, 0.5);
    font-weight: bold;
    clear: both;
}

.treeHeader .treeItemBox {
    padding-left: 4px;
    border-bottom: none;
    border-left: none;
    border-right: none;
}

.treeHeader.selected .treeItemBox {
    background: #7D92E0 url(selection.gif) repeat-x bottom;
    border-color: rgb(56, 128, 207);
    color: #FFFFFF;
    text-shadow: none;
    -webkit-border-radius: 0;
}

.treeHeader .treeItemLink {
    display: block;
    padding-left: 4px;
    background: transparent;
}

.treeItem {
    list-style-type: none;
    clear: both;
}

.treeItemBox {
    display: block;
    padding: 3px 4px 3px 14px;
    border: 1px solid transparent;
}

.treeItem.selected .treeItemBox {
    background: #7D92E0 url(selection.gif) repeat-x bottom;
    border-color: rgb(56, 128, 207);
    color: #FFFFFF;
}

.treeList {
    margin: 0;
    padding: 0;
}

.treeBox > .treeBody > .treeList > .treeItem > .treeItemBox {
    padding-left: 36px;
}

.treeBox > .treeBody > .treeList > .treeList > .treeItem > .treeItemBox {
    padding-left: 54px;
}

.treeBox > .treeBody > .treeList > .treeList > .treeList > .treeItem > .treeItemBox {
    padding-left: 72px;
}

.treeItemLink {
    cursor: default;
    display: block;
    background: url(emptyIcon-sm.png) no-repeat 0 1px;
    padding-left: 18px;
    color: inherit;
    text-decoration: none;
    white-space: nowrap;
}

.treeItemLink:focus {
    -moz-outline: 2px solid black;
}

.treeItemLink.treeItemType-Inspector,
.treeItemLink.treeItemType-Exe {
    background-image: url(inspectorIcon.png);
}

.treeItemLink.treeItemType-Project {
    background-image: url(projectIcon.png);
}

/**************************************************************************************************/

.treeItem.testStatus-skip .treeItemLink {
    background-image: url(skipIcon-sm.png);
}

.treeItem.testStatus-passed .treeItemLink,
.treeItem.testStatus-allPassed .treeItemLink {
    background-image: url(successIcon-sm.png);
}

.treeItem.testStatus-failed .treeItemLink,
.treeItem.testStatus-someFailed .treeItemLink {
    background-image: url(failureIcon-sm.png);
}

.treeItem.testStatus-exception .treeItemLink {
    background-image: url(exceptionIcon-sm.png);
}

.treeItem.running .treeItemLink {
    background-image: url(loading.gif) !important;
}

.treeItemCheckbox {
    margin-bottom: 3px;
}

.treeItemCheckbox .treeItemLink {
    background: none;
    padding-left: 0;
}

